<resources>
    <string name="app_name">sipala</string>
    <string name="on_boarding_text"><![CDATA[Masalah lambung jadi lebih mudah & fleksibel]]></string>
    <string name="get_started">Get Started</string>
    <string name="logo_sipala">Logo Sipala</string>
    <string name="sign_in">Sign In</string>
    <string name="back_home"><u>Back Home</u></string>
    <string name="gejala">Gejala</string>
    <string name="result">Result</string>
    <string name="awali_langkahmu_untuk_lambung_yang_lebih_sehat">Awali langkahmu untuk lambung yang lebih sehat!</string>
    <string name="diagnosa_gejala">Diagnosa Gejala</string>
    <string name="get_in">Get in and \nstart checking your stomach !</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="forgot_my_password"><u>Forgot My Password</u></string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="re_enter_your_passsword">Re-enter Your Passsword</string>
    <string name="login">I have account</string>
    <string name="get_in_and">Get in and</string>
    <string name="start_checking_your_stomach">Start checking your stomach!</string>
    <string name="forgor_password"><u>Forgot Your Password</u></string>
    <string name="signin">Sign in</string>
    <string name="null_email">Please Enter Your Email!</string>
    <string name="not_valid_email">Your Email format was Invalid</string>
    <string name="null_password">Please Enter Your Your Password!</string>
    <string name="should_6_password">At least enter 6 characters in password</string>
    <string name="pass_not_same">Your first and second Password Was Not Same!</string>
    <string name="tips_lambung">Lambung adalah organ pencernaan yang terdapat dibagian perut manusia. Lambung yang sehat dapat menjalankan tugasnya dengan baik yakni untuk menampung dan mencerna makanan serta menyerap nutrisi dari makanan yang kita konsumsi. Jika lambung mengalami gangguan, nutrisi dalam makanan tidak dapat dicerna secara maksimal dan perut akan merasa tidak enak. Oleh karena inim menjaga kesehatan lambung amatlah penting supaya kita dapat nyaman menyantap makanan dan kebutuhan nutrisi terpenuhi. </string>
    <string name="about_text">Sistem Pakar Diagnosa Penyakit Lambung digunakan untuk mendiagnosa gejala-gejala yang mungkin terjadi pada lambung. Aplikasi ini hanya untuk mendiagnosa, apabila Anda mengalami gejala dan mendapatkan diagnosa dari Aplikasi Kami, disarankan untuk segera melakukan pemeriksaan lebih lanjut dengan dokter pada rumah sakit terdekat.</string>
    <string name="dev_list">Muhammad Rafi Aziz \nMuhamad Faheem Sultan Al Azis \nNabilah Putri Cantika \nNabil Qois \nDevany Putri Mirasati \nDinda Fathihah Sari \nAdam Aristama \nKhumairotul Khoiriah</string>
    <string name="univ_year">UNIVERSITAS INDRAPRASTA PGRI \n2023</string>
    <string name="note">NOTE : Aplikasi ini hanya untuk mendiagnosa. Apabila Anda mengalami gejala dan mendapatkan diagnosa dari Aplikasi Kami, disarankan untuk segera melakukan pemeriksaan lebih lanjut dengan dokter pada rumah sakit terdekat.</string>
</resources>