<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sipala_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sipala_logo"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_sipala"
        />

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_text"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sipala_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/get_started"
        app:layout_constraintTop_toBottomOf="@+id/tv_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bnt_sign_in"
        style="@style/Button"
        android:backgroundTint="@color/choco_red"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>