<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:statusBarForeground="@color/pink_rose"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/MyNav"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="About"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sipala_logo"
        app:layout_constraintTop_toBottomOf="@id/appbarlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/about_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/pink_rose"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </com.google.android.material.card.MaterialCardView>
    
    <TextView
        android:id="@+id/tv_developer"
        style="@style/txt_light_b_dark_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team Pengembang :"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/about_card"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_developer_list"
        style="@style/txt_light_b_dark_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_list"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_developer"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/univ_year"
        style="@style/txt_light_b_dark_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/univ_year"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>