<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrasiActivity"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/labelFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/full_name"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:id="@+id/layoutName"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelFullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFullname"
                android:background="@drawable/rounded_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_regular"
                android:textSize="19sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/email_address"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintTop_toBottomOf="@+id/labelEmail"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:background="@drawable/rounded_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_regular"
                android:textSize="19sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword"
            >

            <com.nabil.sipala.CustomEditTextPassword
                android:id="@+id/editPass"
                android:inputType="textPassword"
                android:background="@drawable/rounded_text"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="19sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/re_enter_your_passsword"
            android:textSize="23sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layoutPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword2"
            >

            <com.nabil.sipala.CustomEditTextPassword
                android:id="@+id/editConfpass"
                android:inputType="textPassword"
                android:background="@drawable/rounded_text"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_regular"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:background="@drawable/rounded_button_dark"
            android:text="Continue"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword2"
            app:layout_constraintStart_toStartOf="@id/layoutPassword2"
            app:layout_constraintEnd_toEndOf="@id/layoutPassword2"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_semibold"
            />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/login"
            android:textColor="#7D8797"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="655dp"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/btnRegister"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>